skill section mobile fixed, data changed

--- a/oleksandra-lavryk-portfolio/src/components/About/About.css
+++ b/oleksandra-lavryk-portfolio/src/components/About/About.css
@@ -97,11 +97,11 @@
 
   .about-photo--mobile {
     width: 50%;
-    margin: 20px auto;
+    margin: 15px auto;
   }
 
   .about-text p {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 18px;
   }
 }
