--- a/oleksandra-lavryk-portfolio/src/index.css
+++ b/oleksandra-lavryk-portfolio/src/index.css
@@ -138,7 +138,7 @@ h3 {
     line-height: 35px;
   }
 
-  section:not(#about-section) {
+  section:not(#about-section):not(#skills-section) {
     padding: 50px 0;
   }
 
@@ -149,7 +149,7 @@ h3 {
 }
 
 @media screen and (max-width: 991px) {
-  section:not(#about-section) {
+  section:not(#about-section):not(#skills-section) {
     padding: 35px 0;
   }
 
@@ -181,7 +181,7 @@ h3 {
 }
 
 @media screen and (max-width: 767px) {
-  section:not(#about-section) {
+  section:not(#about-section):not(#skills-section) {
     padding: 30px 0;
   }
 
@@ -217,8 +217,8 @@ h3 {
 @media screen and (max-width: 375px) {
 
   h3 {
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 18px;
+    line-height: 24px;
   }
 
   h2 {
